Added render operations and result

--- a/WaveAdd/WaveAdd/WaveAdd.csproj
+++ b/WaveAdd/WaveAdd/WaveAdd.csproj
@@ -58,6 +58,12 @@
     <Compile Include="About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="Viewer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Viewer.Designer.cs">
+      <DependentUpon>Viewer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Wave.cs" />
     <Compile Include="WaveDisplay.cs">
       <SubType>UserControl</SubType>
@@ -75,6 +81,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Viewer.resx">
+      <DependentUpon>Viewer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WaveDisplay.resx">
       <DependentUpon>WaveDisplay.cs</DependentUpon>
